# 2d-game-engine

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  conandata.yml  conanfile.py
src/: main.cpp
src/components/: rigid-body-component.h  transform-component.h
src/ecs/: ecs.cpp  ecs.h
src/game/: game.cpp  game.h
src/logger/: logger.cpp  logger.h
src/systems/: movement-system.h
